fix: missing gaps between sections

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header,
 footer {
   width: 100%;
   max-width: 1400px;
-  margin: 0rem auto;
+  margin: 1rem auto;
 }
 
 a {
